{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 105,
  "lineage": "448207e2-32f0-5bc7-d42d-dd4fcf50d6f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dvna_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e333c0264f9b9207",
            "association_id": "eipassoc-04931c7da6b8330a2",
            "domain": "vpc",
            "id": "eipalloc-0e333c0264f9b9207",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0db54aebb40aab8eb",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-18-209-115-58.compute-1.amazonaws.com",
            "public_ip": "18.209.115.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dvna_igw",
            "aws_vpc.dvna_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcbb298c035b6901",
            "association_id": "eipassoc-09225bea355c8418c",
            "domain": "vpc",
            "id": "eipalloc-0dcbb298c035b6901",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd2d588e8e4a0dd2",
            "private_dns": "ip-10-0-1-96.ec2.internal",
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-34-192-233-25.compute-1.amazonaws.com",
            "public_ip": "34.192.233.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dvna_igw",
            "aws_vpc.dvna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dvna_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:internet-gateway/igw-0017b5678e95b0d78",
            "id": "igw-0017b5678e95b0d78",
            "owner_id": "043872103327",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dvna_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043872103327:loadbalancer/app/dvna-lb/f9b3093715f5d234",
            "arn_suffix": "app/dvna-lb/f9b3093715f5d234",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dvna-lb-206650130.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:043872103327:loadbalancer/app/dvna-lb/f9b3093715f5d234",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dvna-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ae9fc40abfc225c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0185c7ba28dc90370"
              },
              {
                "subnet_id": "subnet-061d3fdb30846a625"
              }
            ],
            "subnets": [
              "subnet-0185c7ba28dc90370",
              "subnet-061d3fdb30846a625"
            ],
            "vpc_id": "vpc-05ccf831f53d997ac",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.dvna_http_sg",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dvna_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043872103327:listener/app/dvna-lb/f9b3093715f5d234/d5c87e961472f85e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:043872103327:targetgroup/dvna-target-group/1c2f723482c43dce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:043872103327:listener/app/dvna-lb/f9b3093715f5d234/d5c87e961472f85e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:043872103327:loadbalancer/app/dvna-lb/f9b3093715f5d234",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dvna_lb",
            "aws_lb_target_group.dvna_target_group",
            "aws_security_group.dvna_http_sg",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dvna_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043872103327:targetgroup/dvna-target-group/1c2f723482c43dce",
            "arn_suffix": "targetgroup/dvna-target-group/1c2f723482c43dce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,302",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:043872103327:targetgroup/dvna-target-group/1c2f723482c43dce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dvna-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dvna_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e333c0264f9b9207",
            "connectivity_type": "public",
            "id": "nat-0d2d7895beab6401c",
            "network_interface_id": "eni-0db54aebb40aab8eb",
            "private_ip": "10.0.0.252",
            "public_ip": "18.209.115.58",
            "subnet_id": "subnet-061d3fdb30846a625"
          },
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcbb298c035b6901",
            "connectivity_type": "public",
            "id": "nat-01590208bad78cb4c",
            "network_interface_id": "eni-0bd2d588e8e4a0dd2",
            "private_ip": "10.0.1.96",
            "public_ip": "34.192.233.25",
            "subnet_id": "subnet-0185c7ba28dc90370"
          },
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dvna_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:route-table/rtb-0c074c42c0c492119",
            "id": "rtb-0c074c42c0c492119",
            "owner_id": "043872103327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2d7895beab6401c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_nat_gateway.dvna_nat",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:route-table/rtb-04cb251c9e193a05a",
            "id": "rtb-04cb251c9e193a05a",
            "owner_id": "043872103327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01590208bad78cb4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_nat_gateway.dvna_nat",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dvna_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:route-table/rtb-0626cb3dc41bbc5a5",
            "id": "rtb-0626cb3dc41bbc5a5",
            "owner_id": "043872103327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0017b5678e95b0d78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dvna_igw",
            "aws_vpc.dvna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dvna_private_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d19b3f9ee59f75",
            "route_table_id": "rtb-0c074c42c0c492119",
            "subnet_id": "subnet-08bfcae5cb2f08058"
          },
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_nat_gateway.dvna_nat",
            "aws_route_table.dvna_private_route",
            "aws_subnet.dvna_private_subnet",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1d277c0f90df578",
            "route_table_id": "rtb-04cb251c9e193a05a",
            "subnet_id": "subnet-04841f092adafd9f9"
          },
          "dependencies": [
            "aws_eip.dvna_ips",
            "aws_internet_gateway.dvna_igw",
            "aws_nat_gateway.dvna_nat",
            "aws_route_table.dvna_private_route",
            "aws_subnet.dvna_private_subnet",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dvna_public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70c8587085060b6",
            "route_table_id": "rtb-0626cb3dc41bbc5a5",
            "subnet_id": "subnet-061d3fdb30846a625"
          },
          "dependencies": [
            "aws_internet_gateway.dvna_igw",
            "aws_route_table.dvna_public_route",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01636df8d391905b3",
            "route_table_id": "rtb-0626cb3dc41bbc5a5",
            "subnet_id": "subnet-0185c7ba28dc90370"
          },
          "dependencies": [
            "aws_internet_gateway.dvna_igw",
            "aws_route_table.dvna_public_route",
            "aws_subnet.dvna_public_subnet",
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dvna_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:security-group/sg-09501ea702793b5ab",
            "description": "Security group for ecs service.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public web traffic to app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09501ea702793b5ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow public web traffic to app",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae9fc40abfc225c6"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "dvna-ecs-security-group",
            "name_prefix": "",
            "owner_id": "043872103327",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dvna_http_sg",
            "aws_vpc.dvna_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dvna_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:security-group/sg-0ae9fc40abfc225c6",
            "description": "Security group for http traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public web traffic to alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae9fc40abfc225c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public web traffic to alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dvna-http-sg",
            "name_prefix": "",
            "owner_id": "043872103327",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dvna_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dvna_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:subnet/subnet-08bfcae5cb2f08058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bfcae5cb2f08058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043872103327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:subnet/subnet-04841f092adafd9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04841f092adafd9f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043872103327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dvna_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:subnet/subnet-061d3fdb30846a625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061d3fdb30846a625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043872103327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:subnet/subnet-0185c7ba28dc90370",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0185c7ba28dc90370",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043872103327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05ccf831f53d997ac"
          },
          "dependencies": [
            "aws_vpc.dvna_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dvna_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043872103327:vpc/vpc-05ccf831f53d997ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05469e3b1c62f5ef8",
            "default_route_table_id": "rtb-04085fbef6f78bfdd",
            "default_security_group_id": "sg-058985bd63b363e36",
            "dhcp_options_id": "dopt-f79a7b8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ccf831f53d997ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04085fbef6f78bfdd",
            "owner_id": "043872103327"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}